test/functions/hilde/bothKeywords.good
bothKeywords.chpl:2: error: syntax error near 'export'
