test/functions/hilde/bothKeywords.chpl
// Test that inline and export are incompatible.
inline export proc myPlus(a: real, b: real) return 10.0;

